--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 # ---------------------------------------------------------------
 
 # Site
-title: NexT
+title: ghx's
 subtitle:
-description:
+description: little steps
 author: Gao Haoxiang
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: en
