--- a/_config.yml
+++ b/_config.yml
@@ -215,7 +215,7 @@ font:
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 social:
   GitHub: https://github.com/pluto-the-lost
-  
+
 
 
 # Social Links Icons
@@ -737,3 +737,6 @@ images: assets/images
 
 # Theme version
 version: 5.1.1
+
+# show future articles
+future: true
